--- a/src/Editor.css
+++ b/src/Editor.css
@@ -1,8 +1,11 @@
 .container {
     background: #343434;
     text-align: center;
-    width: 100vw;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 525px 450px 525px;
+    grid-column: 3;
 }
 
 .fields-container {
@@ -11,6 +14,72 @@
     float: left;
     margin: 25px;
     padding: 25px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  margin-left: -30px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 8px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.components-container {
+    background: #282c34;
+    width: 400px;
+    float: left;
+    margin: 25px;
+    padding: 25px;
+    clear: left;
+}
+
+.card-container {
+  background: #282c34;
+  width: 400px;
+  height: 750px;
+  float: right;
+  margin: 25px;
+  clear: right;
+}
+
+.remove-container {
+  width: 450px;
+  height: 800px;
+  background: #e74c3c;
+  margin: 25px;
+  float: right;
+  clear: right;
 }
 
 .labelTop {
@@ -30,7 +99,7 @@
 
 .FormFieldTopRight {
     width: 300px;
-    float: left;
+    float: right;
 }
 
 .card-container {
@@ -53,7 +122,7 @@
     background: green;
     height: 50px;
     width: 50px;
-    textAlign: center;
+    text-align: center;
     float: left;
 }
 
@@ -61,7 +130,7 @@
     background: red;
     height: 50px;
     width: 50px;
-    textAlign: center;
+    text-align: center;
     float: left;
 }
 
@@ -69,7 +138,7 @@
     background: blue;
     height: 50px;
     width: 50px;
-    textAlign: center;
+    text-align: center;
     float: right;
 }
 
@@ -83,25 +152,25 @@
     background: grey;
     height: 100px;
     width: 400px;
-    textAlign: center;
+    text-align: center;
     float: left;
     word-break: break-word;
 }
 
 .card-image {
   width: 100%;
-  height: 500px;
-  object-fit: cover;
+  height: 100%;
+  object-fit: contain;
   display: block;
   margin-bottom: 0;
-  background-color: red;
+  background-color: black;
 }
 
 .name {
     background: #61dafb;
     height: 50px;
     width: 300px;
-    textAlign: center;
+    text-align: center;
     float: left;
 }
 
@@ -109,8 +178,80 @@
     background: gray;
     height: 50px;
     width: 50px;
-    textAlign: center;
+    text-align: center;
     float: left;
+}
+
+.oneBlock {
+  background: gray;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  float: left;
+}
+
+.twoBlock {
+  background: gray;
+  height: 50px;
+  width: 100px;
+  text-align: center;
+  float: left;
+}
+
+.threeBlock {
+  background: gray;
+  height: 50px;
+  width: 150px;
+  text-align: center;
+  float: left;
+}
+
+.fourBlock {
+  background: gray;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  float: left;
+}
+
+.fiveBlock {
+  background: gray;
+  height: 50px;
+  width: 250px;
+  text-align: center;
+  float: left;
+}
+
+.sixBlock {
+  background: gray;
+  height: 50px;
+  width: 300px;
+  text-align: center;
+  float: left;
+}
+
+.sevenBlock {
+  background: gray;
+  height: 50px;
+  width: 350px;
+  text-align: center;
+  float: left;
+}
+
+.eightBlock {
+  background: gray;
+  height: 50px;
+  width: 400px;
+  text-align: center;
+  float: left;
+}
+
+.doubleBlock {
+  background: gray;
+  height: 100px;
+  width: 400px;
+  text-align: center;
+  float: left;
 }
 
 input {
